@@ -1,3 +1,9 @@
+2010-11-23  Jakub Jelinek  <jakub@redhat.com>
+
+	PR middle-end/46499
+	* gcc.dg/pr46499-1.c: New test.
+	* gcc.dg/pr46499-2.c: New test.
+
 2010-11-23  Jack Howarth  <howarth@bromo.med.uc.edu>
 
 	* gcc.target/i386/alias-1.c: Require alias support.
