@@ -1,3 +1,9 @@
+2010-11-23  Jakub Jelinek  <jakub@redhat.com>
+
+	PR middle-end/46499
+	* cfgexpand.c (maybe_cleanup_end_of_block): Remove also BARRIERs
+	following unconditional jumps.
+
 2010-11-23  Richard Guenther  <rguenther@suse.de>
 
 	* doc/md.texi (386 constraints): Clarify A constraint documentation.
